# Spark-ml-algo-lib

./: .gitignore  COPING.md  README.md  build.sbt  pom.xml
ml-accelerator/: pom.xml
ml-core/: pom.xml
ml-kernel/: pom.xml
ml-kernel-client/: pom.xml
ml-kernel-client-core/: pom.xml
ml-xgboost/: CMakeLists.txt  Jenkinsfile  appveyor.yml
ml-xgboost/demo/data/: dermatology.data.test  dermatology.data.train  dermatology_process.py
ml-xgboost/dmlc-core/: CMakeLists.txt  Makefile
ml-xgboost/doc/: parameter.rst
ml-xgboost/doc/contrib/: unit_tests.rst
ml-xgboost/include/xgboost/: c_api.h  gbm.h  learner.h  parameter.h  tree_updater.h
ml-xgboost/jvm-packages/: CMakeLists.txt  create_jni.py  pom.xml
ml-xgboost/jvm-packages/boostkit-xgboost4j/: pom.xml
ml-xgboost/jvm-packages/boostkit-xgboost4j-example/: README.md  pom.xml
ml-xgboost/jvm-packages/boostkit-xgboost4j-flink/: pom.xml
ml-xgboost/jvm-packages/boostkit-xgboost4j-spark/: pom.xml
ml-xgboost/jvm-packages/boostkit-xgboost4j-spark-client/: pom.xml
ml-xgboost/jvm-packages/boostkit-xgboost4j-spark-kernel-client/: pom.xml
ml-xgboost/jvm-packages/dev/: change_version.sh
ml-xgboost/kernel_include/: README.md
ml-xgboost/kernel_include/boostkit_xgboost_kernel/: bbgen.h  rabit_intrinsics.h  update_quantile_hist_kernel.h
ml-xgboost/kernel_include/boostkit_xgboost_kernel_client/: CMakeLists.txt  bbgen.cpp  rabit_intrinsics.cpp  update_quantile_hist_kernel.cpp
ml-xgboost/rabit/: CMakeLists.txt  Makefile
ml-xgboost/rabit/guide/: Makefile
ml-xgboost/rabit/test/: Makefile
ml-xgboost/rabit/test/cpp/: CMakeLists.txt
ml-xgboost/src/: CMakeLists.txt  cli_main.cc  learner.cc
ml-xgboost/src/c_api/: c_api.cc
ml-xgboost/src/common/: hist_util.cc
ml-xgboost/src/gbm/: gblinear.cc  gbtree.cc  gbtree.h
ml-xgboost/src/tree/: param.h  updater_colmaker.cc  updater_histmaker.cc  updater_prune.cc  updater_quantile_hist.cc  updater_quantile_hist.h  updater_refresh.cc  updater_skmaker.cc  updater_sync.cc
ml-xgboost/tests/cpp/common/: test_partition_builder.cc  test_partition_builder.cc.rej
tools/kal-test/: README.md  pom.xml
(+501 files in other folders)
